<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:orientation="vertical"
    tools:context="com.addressbook.android.main.EditRemoveAddressBookActivity">

    <include layout="@layout/layout_tool_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dim_10"
            android:paddingEnd="@dimen/dim_45"
            android:paddingStart="@dimen/dim_45"
            android:paddingTop="@dimen/dim_10">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_12"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_12"
                android:background="@drawable/rounder_corner"
                android:ellipsize="end"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/dim_12"
                android:textColor="@android:color/black"
                android:textColorHint="@color/Gray70"
                android:textSize="@dimen/text_size_12"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_12"
                android:text="@string/lbl_email"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_12"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_12"
                android:background="@drawable/rounder_corner"
                android:ellipsize="end"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/dim_12"
                android:textColor="@android:color/black"
                android:textColorHint="@color/Gray70"
                android:textSize="@dimen/text_size_12"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_12"
                android:text="@string/lbl_contact_no"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_12"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_contact_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_12"
                android:background="@drawable/rounder_corner"
                android:ellipsize="end"
                android:hint="@string/hint_contact_no"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="@dimen/dim_12"
                android:textColor="@android:color/black"
                android:textColorHint="@color/Gray70"
                android:textSize="@dimen/text_size_12"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_12"
                android:text="@string/lbl_active"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_12"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginTop="@dimen/dim_12"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_save_update"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_45"
                android:layout_marginTop="@dimen/dim_40"
                android:background="@drawable/rounded_corner_button"
                android:gravity="center"
                android:text="@string/action_save"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_14"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_delete_cancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_45"
                android:layout_marginTop="@dimen/dim_8"
                android:background="@drawable/rounded_corner_button"
                android:gravity="center"
                android:text="@string/action_delete"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_14"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
